*ovirt-host-deploy-1.0.1 (03 Apr 2013)

  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +ovirt-host-deploy-1.0.1.ebuild:
  Add ovirt-host-deploy-1.0.1

  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-host-deploy-9999.ebuild:
  setup layout