@@ -1,3 +1,7 @@
+  18 Apr 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-host-deploy-1.0.1.ebuild,
+  ovirt-host-deploy-9999.ebuild:
+  move gettext to DEPEND
+
 *ovirt-host-deploy-1.0.1 (03 Apr 2013)
 
   03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +ovirt-host-deploy-1.0.1.ebuild:
